<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>client-script-tree-node</artifactId>
	<groupId>org.gjp.forgerock.auth-trees</groupId>
	<version>1.0</version>
	<name>Client Script Tree Node</name>
	<description>A Client Script Authentication Tree Node</description>
	<properties>
		<am.version>6.5.0</am.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.forgerock.am</groupId>
				<artifactId>openam-auth-trees</artifactId>
				<type>pom</type>
				<scope>import</scope>
				<version>${am.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.forgerock.am</groupId>
			<artifactId>auth-node-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.forgerock.am</groupId>
			<artifactId>openam-guice-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.forgerock.am</groupId>
			<artifactId>openam-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.forgerock.am</groupId>
			<artifactId>openam-scripting</artifactId>
		</dependency>
		<dependency>
			<groupId>org.forgerock.commons</groupId>
			<artifactId>forgerock-test-utils</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.forgerock.am</groupId>
			<artifactId>openam-core</artifactId>
			<type>test-jar</type>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
					<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
						-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>forgerock-private-releases</id>
			<name>ForgeRock Private Release Repository</name>
			<url>http://maven.forgerock.org/repo/private-releases</url>
		</repository>
	</repositories>
</project>
